--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 <script src="jq.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-<script src="main.js"></script>
+<script src="test.js"></script>
 </body>
 </html>
